--- a/app/src/main/assets/produtos.html
+++ b/app/src/main/assets/produtos.html
@@ -216,21 +216,23 @@ function finalizarPedidos() {
 
     if (produtos.length > 0) {
         produtos.forEach(p => {
-            Android.finalizarPedido(p.codigo, p.quantidade, p.preco);
+            Android.finalizarPedido(p.codigo, p.quantidade, p.preco); // já atualiza o estoque no Java
         });
     }
 
+    // Atualiza todas as tabelas visuais
     carregarPedidosDaSemana();
     carregarResumoSemanal();
     carregarResumoMensal();
     carregarEstoqueAtual();
 }
 
+
 function carregarEstoqueAtual() {
     if (typeof Android === "undefined") return;
 
     const raw = Android.getEstoque() || "[]";
-    console.log("RAW ESTOQUE:", raw); // <-- log do que veio do Android
+    console.log("RAW ESTOQUE:", raw);
 
     let estoque;
     try {
@@ -240,19 +242,24 @@ function carregarEstoqueAtual() {
         estoque = [];
     }
 
-    console.log("JSON ESTOQUE PARSEADO:", estoque); // <-- log do array parseado
+    console.log("JSON ESTOQUE PARSEADO:", estoque);
 
     const tbody = document.querySelector("#tabelaEstoqueAtual tbody");
     tbody.innerHTML = "";
 
     estoque.forEach(item => {
-        console.log("Item do estoque:", item); // <-- log de cada item
+        console.log("Item do estoque:", item);
+
+        // Cria a linha com data-codigo para poder atualizar depois
         const tr = document.createElement("tr");
+        tr.dataset.codigo = item.codigo_produto;
+
         tr.innerHTML = `
             <td>${item.codigo_produto}</td>
             <td>${item.descricao}</td>
             <td>${item.embalagem ?? "-"}</td>
-            <td>${Number(item.quantidade_atual || 0)}</td>
+            <td>${window.__usoRealPorProduto?.[item.codigo_produto] ?? Number(item.quantidade_atual || 0).toFixed(1)}</td>
+
         `;
         tbody.appendChild(tr);
     });
@@ -264,11 +271,8 @@ function carregarEstoqueAtual() {
     }
 }
 
-
-
-
-    // TABELA SEMANAL
-   function carregarPedidosDaSemana() {
+// TABELA SEMANAL
+function carregarPedidosDaSemana() {
     if (typeof Android === "undefined") return;
 
     const pedidos = JSON.parse(Android.getPedidosDaSemana());
@@ -322,7 +326,6 @@ function carregarEstoqueAtual() {
     document.getElementById("totalSemana").innerText = "R$ " + totalSemana.toFixed(2);
 }
 
-
 // função para calcular número da semana do ano
 function getNumeroDaSemana(dataStr) {
     const data = new Date(dataStr);
@@ -330,6 +333,7 @@ function getNumeroDaSemana(dataStr) {
     const pastDaysOfYear = (data - primeiroDiaDoAno) / 86400000;
     return Math.ceil((pastDaysOfYear + primeiroDiaDoAno.getDay() + 1) / 7);
 }
+
 
 
     // GRÁFICOS
@@ -444,7 +448,6 @@ function abrirTelaAtualizacaoEstoque() {
     if (typeof Android === "undefined") return;
 
     const produtosJson = Android.getProdutosCartazista();
-    console.log("Produtos recebidos:", produtosJson);
     const produtos = JSON.parse(produtosJson);
 
     let html = `
@@ -452,17 +455,17 @@ function abrirTelaAtualizacaoEstoque() {
         <div class="d-flex flex-wrap gap-2" style="max-height: 400px; overflow-y: auto;">`;
 
     produtos.forEach(prod => {
-        html += `
-    <div class="card p-1 shadow-sm" style="flex: 0 0 48%; font-size: 0.8rem;">
-        <div>
-            <strong>${prod.descricao}</strong><br>
-            <small>Código: ${prod.codigo}</small><br>
-            <small>Embalagem: ${prod.embalagem}</small><br>
-            <small>Qtd/embalagem: ${prod.qtd_por_embalagem}</small>
-        </div>
-        <input type="number" min="0" step="0.1" class="form-control form-control-sm mt-1"
-            id="qtd_${prod.codigo}" placeholder="0">
+       html += `
+<div class="card p-1 shadow-sm" style="flex: 0 0 48%; font-size: 0.7rem;">
+    <div>
+        <strong>${prod.descricao}</strong><br>
+        <small>Código: ${prod.codigo}</small><br>
+        <small>Embalagem: ${prod.embalagem}</small><br>
+        <small>Qtd/embalagem: ${prod.qtd_por_embalagem}</small>
     </div>
+    <input type="number" min="0" step="0.1" class="form-control form-control-sm mt-1"
+        id="qtd_${prod.codigo}" placeholder="0">
+</div>
 `;
     });
 
@@ -489,34 +492,43 @@ function abrirTelaAtualizacaoEstoque() {
     document.body.appendChild(modalDiv);
 }
 
-
-
 function abrirResumoComparativo() {
     if (typeof Android === "undefined") return;
 
-    // Captura os valores digitados no primeiro modal
+    // Captura os valores digitados manualmente
     const estoqueAtualManual = {};
     document.querySelectorAll("input[id^='qtd_']").forEach(input => {
         const codigo = input.id.replace("qtd_", "");
-        const valor = parseFloat(input.value) || 0; // validação: se vazio, usa 0
+        const valor = parseFloat(input.value) || 0;
         estoqueAtualManual[codigo] = valor;
     });
 
-    // Fecha o primeiro modal
-    document.getElementById("modalEstoqueAtual").remove();
+    // Fecha modal antigo (se existir)
+    document.getElementById("modalEstoqueAtual")?.remove();
 
-    // Busca os dados do banco (estoque atual) e os pedidos
-    const estoqueBanco = JSON.parse(Android.getEstoque() || "[]"); // estoque atual do banco
-    const pedidos = JSON.parse(Android.getPedidosDaSemana() || "[]"); // pedidos da semana
+    // Pega dados do banco
+    const estoqueBanco = JSON.parse(Android.getEstoque() || "[]");
+    const pedidosBanco = JSON.parse(Android.getPedidosDaSemana() || "[]");
 
-    // Mapear pedidos por código para facilitar cálculo
+    // Soma total de pedidos da semana por produto
     const pedidosMap = {};
-    pedidos.forEach(p => {
+    pedidosBanco.forEach(p => {
         const cod = p.codigo_produto;
         pedidosMap[cod] = (pedidosMap[cod] || 0) + Number(p.quantidade || 0);
     });
 
-    // Montar tabela comparativa
+    // Adiciona pedidos ainda não salvos
+    document.querySelectorAll("#listaProdutos .card").forEach(card => {
+    const input = card.querySelector("input");
+    const qtdEmbalagens = parseInt(input.value) || 0;
+    if (qtdEmbalagens > 0) {
+        const codigo = parseInt(card.querySelector(".codigo").innerText.split(":")[1].trim());
+        const qtdPedidoAtual = qtdEmbalagens; // 🔹 usa o número de embalagens diretamente (1 = 1 pedido)
+        pedidosMap[codigo] = qtdPedidoAtual;
+    }
+});
+
+    // Monta a tabela de resumo
     let html = `<table class="table table-bordered table-sm">
         <thead class="table-light">
             <tr>
@@ -537,9 +549,29 @@ function abrirResumoComparativo() {
         const pedidoNovo = Number(pedidosMap[cod] || 0);
         const atual = Number(estoqueAtualManual[cod] || 0);
 
-        if (banco !== 0) estoqueZerado = false;
+        if (banco !== 0 || pedidoNovo !== 0) estoqueZerado = false;
 
-        const usoReal = (banco + pedidoNovo - atual).toFixed(1);
+        let usoReal = 0;
+
+// 🔹 Estoque igual mas há pedido → tudo que pediu foi consumo
+if (atual === banco && pedidoNovo > 0) {
+    usoReal = pedidoNovo + atual;
+}
+// 🔹 Estoque caiu → consumo real
+else if (atual < banco) {
+    usoReal = ((banco - atual) + pedidoNovo).toFixed(1);
+}
+else if (atual === 0) {
+    usoReal = (atual + pedidoNovo).toFixed(1);
+}
+// 🔹 Estoque subiu ou sem alteração → sem consumo
+else {
+    usoReal = atual + pedidoNovo;
+}
+
+
+        // 🔹 Estoque final esperado após novo pedido
+        const estoqueFinal = atual + pedidoNovo;
 
         html += `<tr>
             <td>${p.descricao}</td>
@@ -550,7 +582,6 @@ function abrirResumoComparativo() {
         </tr>`;
     });
 
-    // Se estoque todo era zero, colocar aviso
     if (estoqueZerado) {
         html += `<tr>
             <td colspan="5" class="text-center text-danger">
@@ -562,7 +593,6 @@ function abrirResumoComparativo() {
     html += `</tbody></table>
         <button class="btn btn-success mt-3 w-100" onclick="salvarEstoqueFinal()">Salvar Estoques</button>`;
 
-    // Criar modal
     const modalDiv = document.createElement("div");
     modalDiv.className = "modal fade show";
     modalDiv.style.display = "block";
@@ -580,23 +610,59 @@ function abrirResumoComparativo() {
 
     document.body.appendChild(modalDiv);
 
-    // Salvar temporariamente os valores para uso posterior
+    // Guarda temporariamente os valores informados
     window.__estoqueAtualInformado = estoqueAtualManual;
+
+    window.__usoRealPorProduto = {};
+estoqueBanco.forEach(p => {
+    const cod = p.codigo_produto;
+    const banco = Number(p.quantidade_atual || 0);
+    const pedidoNovo = Number(pedidosMap[cod] || 0);
+    const atual = Number(estoqueAtualManual[cod] || 0);
+
+    let usoReal = 0;
+    if (atual === banco && pedidoNovo > 0) {
+        usoReal = pedidoNovo + atual;
+    } else if (atual < banco) {
+        usoReal = ((banco - atual) + pedidoNovo).toFixed(1);
+    } else if (atual === 0) {
+        usoReal = (atual + pedidoNovo).toFixed(1);
+    } else {
+        usoReal = atual + pedidoNovo;
+    }
+
+    window.__usoRealPorProduto[cod] = usoReal; // salva globalmente
+});
+
 }
+
 
 
 
 function salvarEstoqueFinal() {
     if (!window.__estoqueAtualInformado) return;
 
-    Object.entries(window.__estoqueAtualInformado).forEach(([codigo, qtd]) => {
-        Android.setEstoque(parseInt(codigo), parseFloat(qtd));
+    console.log("💾 Salvando estoque final...");
+
+    // Finaliza pedidos
+    finalizarPedidos();
+
+    // Atualiza no banco cada produto usando os valores calculados de uso real
+    Object.entries(window.__usoRealPorProduto).forEach(([codigo, usoReal]) => {
+        const qtdFinal = Number(usoReal);
+        Android.setEstoque(parseInt(codigo), qtdFinal); // envia pro banco
+        // Atualiza tabela visual
+        const tr = document.querySelector(`#tabelaEstoqueAtual tbody tr[data-codigo='${codigo}']`);
+        if (tr) tr.querySelectorAll("td")[3].innerText = qtdFinal.toFixed(1);
+        console.log(`✅ Produto ${codigo}: Estoque atualizado para ${qtdFinal}`);
     });
 
     alert("Estoque atualizado com sucesso!");
     carregarEstoqueAtual();
-    document.getElementById("modalResumoEstoque").remove();
+    document.getElementById("modalResumoEstoque")?.remove();
 }
+
+
 
 
     // INICIALIZAÇÃO
