--- a/app/src/main/assets/produtos.html
+++ b/app/src/main/assets/produtos.html
@@ -101,6 +101,9 @@
                 <canvas id="graficoMes"></canvas>
                 <button class="btn btn-sm btn-danger btn-fullscreen-close">✕ Sair</button>
             </div>
+
+            <h3>Gráfico de Uso dos Produtos</h3>
+            <canvas id="graficoUsoProdutos"></canvas>
         </div>
 
     </div>
@@ -216,6 +219,7 @@ function finalizarPedidos() {
 
     if (produtos.length > 0) {
         produtos.forEach(p => {
+        console.log("Finalizando pedido:", p);
             Android.finalizarPedido(p.codigo, p.quantidade, p.preco); // já atualiza o estoque no Java
         });
     }
@@ -510,23 +514,16 @@ function abrirResumoComparativo() {
     const estoqueBanco = JSON.parse(Android.getEstoque() || "[]");
     const pedidosBanco = JSON.parse(Android.getPedidosDaSemana() || "[]");
 
-    // Soma total de pedidos da semana por produto
-    const pedidosMap = {};
-    pedidosBanco.forEach(p => {
-        const cod = p.codigo_produto;
-        pedidosMap[cod] = (pedidosMap[cod] || 0) + Number(p.quantidade || 0);
-    });
-
-    // Adiciona pedidos ainda não salvos
+    // Cria mapa apenas do pedido que acabou de ser digitado (pedido novo)
+    const pedidoAtualMap = {};
     document.querySelectorAll("#listaProdutos .card").forEach(card => {
-    const input = card.querySelector("input");
-    const qtdEmbalagens = parseInt(input.value) || 0;
-    if (qtdEmbalagens > 0) {
-        const codigo = parseInt(card.querySelector(".codigo").innerText.split(":")[1].trim());
-        const qtdPedidoAtual = qtdEmbalagens; // 🔹 usa o número de embalagens diretamente (1 = 1 pedido)
-        pedidosMap[codigo] = qtdPedidoAtual;
-    }
-});
+        const input = card.querySelector("input");
+        const qtdEmbalagens = parseInt(input.value) || 0;
+        if (qtdEmbalagens > 0) {
+            const codigo = parseInt(card.querySelector(".codigo").innerText.split(":")[1].trim());
+            pedidoAtualMap[codigo] = qtdEmbalagens; // somente o pedido novo
+        }
+    });
 
     // Monta a tabela de resumo
     let html = `<table class="table table-bordered table-sm">
@@ -542,37 +539,37 @@ function abrirResumoComparativo() {
         <tbody>`;
 
     let estoqueZerado = true;
+    const usoRealPorProduto = {};
+    const usoRealConsumoPorProduto = {};
 
     estoqueBanco.forEach(p => {
         const cod = p.codigo_produto;
         const banco = Number(p.quantidade_atual || 0);
-        const pedidoNovo = Number(pedidosMap[cod] || 0);
+        const pedidoNovo = Number(pedidoAtualMap[cod] || 0); // 🔹 apenas pedido novo
         const atual = Number(estoqueAtualManual[cod] || 0);
 
         if (banco !== 0 || pedidoNovo !== 0) estoqueZerado = false;
 
+        // Cálculo do uso real
         let usoReal = 0;
+         if (atual === 0) {
+            usoReal = pedidoNovo;
+        }  else {
+            usoReal = atual + pedidoNovo;
+        }
 
-// 🔹 Estoque igual mas há pedido → tudo que pediu foi consumo
-if (atual === banco && pedidoNovo > 0) {
-    usoReal = pedidoNovo + atual;
-}
-// 🔹 Estoque caiu → consumo real
-else if (atual < banco) {
-    usoReal = ((banco - atual) + pedidoNovo).toFixed(1);
-}
-else if (atual === 0) {
-    usoReal = (atual + pedidoNovo).toFixed(1);
-}
-// 🔹 Estoque subiu ou sem alteração → sem consumo
-else {
-    usoReal = atual + pedidoNovo;
-}
+        usoRealPorProduto[cod] = usoReal;
 
+        // Consumo real: quanto realmente foi usado desde o último pedido
+        let usoRealConsumo = 0;
+        if (banco > 0 && atual >= 0 && atual < banco) {
+            usoRealConsumo = (banco - atual).toFixed(1);
+        } else {
+            usoRealConsumo = 0;
+        }
+        usoRealConsumoPorProduto[cod] = usoRealConsumo;
 
-        // 🔹 Estoque final esperado após novo pedido
-        const estoqueFinal = atual + pedidoNovo;
-
+        // Monta a linha da tabela
         html += `<tr>
             <td>${p.descricao}</td>
             <td>${banco}</td>
@@ -612,29 +609,30 @@ else {
 
     // Guarda temporariamente os valores informados
     window.__estoqueAtualInformado = estoqueAtualManual;
+    window.__usoRealPorProduto = usoRealPorProduto;
+    window.__usoRealConsumoPorProduto = usoRealConsumoPorProduto;
 
-    window.__usoRealPorProduto = {};
-estoqueBanco.forEach(p => {
-    const cod = p.codigo_produto;
-    const banco = Number(p.quantidade_atual || 0);
-    const pedidoNovo = Number(pedidosMap[cod] || 0);
-    const atual = Number(estoqueAtualManual[cod] || 0);
+    // Mostra aviso de consumo real
+    let mensagemUso = "📦 Consumo registrado desde o último pedido:\n\n";
+    let totalGeral = 0;
 
-    let usoReal = 0;
-    if (atual === banco && pedidoNovo > 0) {
-        usoReal = pedidoNovo + atual;
-    } else if (atual < banco) {
-        usoReal = ((banco - atual) + pedidoNovo).toFixed(1);
-    } else if (atual === 0) {
-        usoReal = (atual + pedidoNovo).toFixed(1);
+    estoqueBanco.forEach(p => {
+        const cod = p.codigo_produto;
+        const uso = parseFloat(usoRealConsumoPorProduto[cod] || 0);
+        if (uso > 0) {
+            mensagemUso += `• ${p.descricao}: ${uso}\n`;
+            totalGeral += uso;
+        }
+    });
+
+    if (totalGeral > 0) {
+        mensagemUso += `\n🔸 Total geral de produtos usados: ${totalGeral}`;
+        alert(mensagemUso);
     } else {
-        usoReal = atual + pedidoNovo;
+        alert("Nenhum produto foi consumido desde o último pedido.");
     }
-
-    window.__usoRealPorProduto[cod] = usoReal; // salva globalmente
-});
-
 }
+
 
 
 
@@ -656,6 +654,8 @@ function salvarEstoqueFinal() {
         if (tr) tr.querySelectorAll("td")[3].innerText = qtdFinal.toFixed(1);
         console.log(`✅ Produto ${codigo}: Estoque atualizado para ${qtdFinal}`);
     });
+
+    carregarGraficoUsoProdutos();
 
     alert("Estoque atualizado com sucesso!");
     carregarEstoqueAtual();
@@ -693,6 +693,206 @@ function salvarEstoqueFinal() {
         abrirTelaAtualizacaoEstoque(); // Nova função que você vai criar
     });
     });
+
+// 🔹 Função para carregar os dados de uso e atualizar o gráfico
+// Função para carregar os dados de uso e atualizar o gráfico
+function carregarGraficoUsoProdutos() {
+    if (typeof Android === "undefined") return;
+
+    console.log("📊 Solicitando dados de uso dos produtos...");
+    const dadosJSON = Android.getDadosUsoProdutos();
+    let dados = [];
+
+    try {
+        dados = JSON.parse(dadosJSON);
+        console.log(`📦 Dados recebidos: ${dados.length} itens`);
+    } catch (e) {
+        console.error("❌ Erro ao parsear JSON de uso dos produtos:", e);
+        return;
+    }
+
+    // Aguarda o layout carregar antes de desenhar o gráfico
+    setTimeout(() => {
+        atualizarGraficoUso(dados);
+    }, 500); // meio segundo — tempo suficiente pra tela estabilizar
+}
+
+// Chama automaticamente ao carregar toda a página
+window.addEventListener("load", () => {
+    console.log("🌐 Página carregada — iniciando gráfico de uso...");
+    carregarGraficoUsoProdutos();
+});
+
+function atualizarGraficoUso(dados) {
+    console.log("🎨 Criando novo gráfico...");
+
+    const canvas = document.getElementById('graficoUsoProdutos');
+    if (!canvas) {
+        console.error("❌ Canvas do gráfico não encontrado!");
+        return;
+    }
+
+    const largura = canvas.offsetWidth;
+    console.log(`📏 Largura do canvas: ${largura}`);
+
+    if (largura === 0) {
+        console.warn("⚠️ Canvas ainda sem largura — tentando novamente...");
+        setTimeout(() => atualizarGraficoUso(dados), 500);
+        return;
+    }
+
+    const valoresUso = [];
+    const valoresPedidoMes = [];
+    const labels = [];
+
+    dados.forEach(item => {
+        if (!labels.includes(item.nome)) labels.push(item.nome);
+    });
+
+    labels.forEach(nome => {
+        const uso = dados.find(i => i.nome === nome && i.tipo === 'uso');
+        valoresUso.push(uso ? uso.total : 0);
+
+        const pedidoMes = dados.find(i => i.nome === nome && i.tipo === 'pedido_mes');
+        valoresPedidoMes.push(pedidoMes ? pedidoMes.total : 0);
+    });
+
+    const ctx = canvas.getContext('2d');
+    if (window.graficoUso) window.graficoUso.destroy();
+
+    window.graficoUso = new Chart(ctx, {
+        type: 'radar',
+        data: {
+            labels: labels.map(() => ""), // remove nomes do radar
+            datasets: [
+                {
+                    label: 'Uso atual',
+                    data: valoresUso,
+                    fill: true,
+                    borderColor: 'blue',
+                    backgroundColor: 'rgba(0,0,255,0.2)',
+                    pointRadius: 5
+                },
+                {
+                    label: 'Pedido do mês',
+                    data: valoresPedidoMes,
+                    fill: false,
+                    borderColor: 'red',
+                    backgroundColor: 'rgba(255,0,0,0.2)',
+                    pointRadius: 5
+                }
+            ]
+        },
+        options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            scales: {
+                r: {
+                    beginAtZero: true,
+                    grid: { color: 'rgba(0,0,0,0.1)' },
+                    angleLines: { color: 'rgba(0,0,0,0.2)' },
+                    ticks: { color: '#000' }
+                }
+            },
+            plugins: {
+                legend: { display: true, labels: { color: '#000' } },
+                tooltip: { enabled: true }
+            }
+        }
+    });
+
+    console.log("✅ Gráfico criado com sucesso!");
+}
+
+
+
+// Função para atualizar o gráfico radar
+function atualizarGraficoUso(dados) {
+    console.log("📊 Iniciando atualização do gráfico...");
+
+    const valoresUso = [];
+    const valoresPedidoMes = [];
+    const labels = [];
+
+    // Coleta os nomes
+    dados.forEach(item => {
+        if (!labels.includes(item.nome)) labels.push(item.nome);
+    });
+    console.log("🔸 Labels encontrados:", labels);
+
+    // Separa os dados
+    labels.forEach(nome => {
+        const uso = dados.find(i => i.nome === nome && i.tipo === 'uso');
+        const pedidoMes = dados.find(i => i.nome === nome && i.tipo === 'pedido_mes');
+
+        console.log(`🔍 Produto: ${nome} | uso=${uso ? uso.total : 0} | pedido_mes=${pedidoMes ? pedidoMes.total : 0}`);
+
+        valoresUso.push(uso ? uso.total : 0);
+        valoresPedidoMes.push(pedidoMes ? pedidoMes.total : 0);
+    });
+
+    console.log("✅ Valores de uso:", valoresUso);
+    console.log("✅ Valores de pedido_mes:", valoresPedidoMes);
+
+    const ctx = document.getElementById('graficoUsoProdutos').getContext('2d');
+
+    if (!ctx) {
+        console.error("❌ Canvas 'graficoUsoProdutos' não encontrado!");
+        return;
+    }
+
+    if (window.graficoUso) {
+        console.log("🧹 Destruindo gráfico antigo...");
+        window.graficoUso.destroy();
+    }
+
+    console.log("🎨 Criando novo gráfico...");
+    window.graficoUso = new Chart(ctx, {
+        type: 'radar',
+        data: {
+            labels: labels.map(() => ""), // oculta nomes se quiser
+            datasets: [
+                {
+                    label: 'Uso atual',
+                    data: valoresUso,
+                    fill: true,
+                    borderColor: 'blue',
+                    backgroundColor: 'rgba(0,0,255,0.2)',
+                    pointRadius: 5
+                },
+                {
+                    label: 'Pedido do mês',
+                    data: valoresPedidoMes,
+                    fill: false,
+                    borderColor: 'red',
+                    backgroundColor: 'rgba(255,0,0,0.2)',
+                    pointRadius: 5
+                }
+            ]
+        },
+        options: {
+            responsive: true,
+            scales: {
+                r: {
+                    beginAtZero: true,
+                    grid: { color: 'rgba(0,0,0,0.1)' },
+                    angleLines: { color: 'rgba(0,0,0,0.2)' },
+                    ticks: { color: '#000' }
+                }
+            },
+            plugins: {
+                legend: { display: true, labels: { color: '#000' } },
+                tooltip: { enabled: true }
+            }
+        }
+    });
+   console.log("📏 Largura do canvas:", document.getElementById('graficoUsoProdutos').offsetWidth);
+    console.log("✅ Gráfico criado com sucesso!");
+}
+
+
+
+
 </script>
 
 </body>
